After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732408 - Check for Updates fails if gpk-update-viewer is not installed
Check for Updates fails if gpk-update-viewer is not installed
Status: RESOLVED FIXED
Product: gnome-packagekit
Classification: Core
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: gnome-packagekit-maint
gnome-packagekit-maint
Depends on:
Blocks:
 
 
Reported: 2014-06-29 02:10 UTC by Michael Catanzaro
Modified: 2014-08-09 14:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fallback to gnome-software to check for updates (2.86 KB, patch)
2014-06-29 02:10 UTC, Michael Catanzaro
none Details | Review
Disable check for updates if gpk-update-viewer is uninstalled (1.24 KB, patch)
2014-08-09 00:22 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2014-06-29 02:10:31 UTC
Check for Updates (in the app menu of gpk-application) failssilently if gpk-update-viewer is not installed. Instead, we should:

* Check for Updates with gpk-update-viewer only if installed
* Fallback to gnome-software if it's not
* But if neither is installed, disable Check for Updates
Comment 1 Michael Catanzaro 2014-06-29 02:10:32 UTC
Created attachment 279510 [details] [review]
Fallback to gnome-software to check for updates

If gpk-update-viewer is not installed, we should fall back to
gnome-software to check for updates. (Even though gnome-software is
nicer, if gpk-update-viewer is installed, that surely means the user
prefers this online updates, and it is a natural companion to
gpk-application.) And if neither is installed, then disable this action,
as it currently fails silently.
Comment 2 Richard Hughes 2014-08-06 15:22:17 UTC
So, you've installed gpk-application, but not gpk-update-viewer?
Comment 3 Michael Catanzaro 2014-08-06 15:59:29 UTC
Yup, you yourself have packaged them separately for Fedora with that in mind :)
Comment 4 Richard Hughes 2014-08-06 17:07:15 UTC
(In reply to comment #3)
> Yup, you yourself have packaged them separately for Fedora with that in mind :)

Doh, of course, sorry for being a moron. I think in this case it's less magic to just hide the entry, rather than using gnome-software which has it's own view of the world view. If you prepare a patch to disable the option if gpk-update-viewer isn't installed, I think it's probably a good compromise. Thanks.
Comment 5 Michael Catanzaro 2014-08-09 00:22:26 UTC
Created attachment 282954 [details] [review]
Disable check for updates if gpk-update-viewer is uninstalled
Comment 6 Richard Hughes 2014-08-09 07:37:30 UTC
Review of attachment 282954 [details] [review]:

Looks good, thanks.
Comment 7 Michael Catanzaro 2014-08-09 14:23:20 UTC
Attachment 282954 [details] pushed as 39e60c0 - Disable check for updates if gpk-update-viewer is uninstalled