Disable check for updates if gpk-update-viewer is uninstalled

https://bugzilla.gnome.org/show_bug.cgi?id=732408